--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Pembuatan Dashboard menggunakan Excel</h2>
+										<h2>Department Performance Report using Ms Excel</h2>
 									</header>
 									<a class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 									<p>Project yang berasal dari belajar mandiri melalui youtube Alex The Analyst tentang pembuatan cleaning data dan pembuatan dashboard menggunakan Excel. Dataset yang dgunakan merupakan dataset HR sebuah perusahaan dari kelas Leveraging Data Analytics oleh Talenthub Kementerian Ketenagakerjaan RI.</p>
@@ -50,7 +50,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Pembuatan Dashboard menggunakan Tableau Public</h2>
+										<h2>Sales Capstone Project</h2>
 									</header>
 									<a class="image fit"><img src="images/pic03.png" alt="" /></a>
 									<p>Project ini merupakan Capstone Project dari kelas Leveraging Data Analytics for Business oleh Talenthub Kementerian Ketenagakerjaan RI. Dataset berupa penjualan produk suatu perusahaan.</p>
@@ -60,7 +60,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Pembuatan Dashboard menggunakan Python dan Streamlit</h2>
+										<h2>Dashboard menggunakan Python dan Streamlit</h2>
 									</header>
 									<a class="image fit"><img src="images/pic02.PNG" alt="" /></a>
 									<p>Project ini merupakan proyek akhir dari materi Belajar Analisis Data dengan Python yang diadakan oleh dicoding dan Indosat. Cleaning dan visualisasi data dilakukan menggunakan python kemudian dashboard di tampilkan melalui aplikasi streamlit</p>
