--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2>Department Performance Report using Ms Excel</h2>
+										<h2>Analisis Kinerja Department Perusahaan</h2>
 									</header>
 									<a class="image fit"><img src="images/pic01.jpg" alt="" /></a>
 									<p>Project yang berasal dari belajar mandiri melalui youtube Alex The Analyst tentang pembuatan cleaning data dan pembuatan dashboard menggunakan Excel. Dataset yang dgunakan merupakan dataset HR sebuah perusahaan dari kelas Leveraging Data Analytics oleh Talenthub Kementerian Ketenagakerjaan RI.</p>
@@ -60,7 +60,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Dashboard menggunakan Python dan Streamlit</h2>
+										<h2>Dashboard menggunakan Google Colab dan Streamlit</h2>
 									</header>
 									<a class="image fit"><img src="images/pic02.PNG" alt="" /></a>
 									<p>Project ini merupakan proyek akhir dari materi Belajar Analisis Data dengan Python yang diadakan oleh dicoding dan Indosat. Cleaning dan visualisasi data dilakukan menggunakan python kemudian dashboard di tampilkan melalui aplikasi streamlit</p>
