--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Dashboard menggunakan Google Colab dan Streamlit</h2>
+										<h2>Dashboard Project using Google Colab and Streamlit</h2>
 									</header>
 									<a class="image fit"><img src="images/pic02.PNG" alt="" /></a>
 									<p>Project ini merupakan proyek akhir dari materi Belajar Analisis Data dengan Python yang diadakan oleh dicoding dan Indosat. Cleaning dan visualisasi data dilakukan menggunakan python kemudian dashboard di tampilkan melalui aplikasi streamlit</p>
