--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 					</div>
 
 				<!-- Header -->
-					<header id="header"></header>
+					<header id="header">
+						<p>PORTOFOLIO</p>
+					</header>
 
 				<!-- Main -->
 					<div id="main">
