--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
 					</div>
 
 				<!-- Header -->
-					<header id="header">
-						<p>PORTOFOLIO</p>
-					</header>
+					<header id="header"></header>
 
 				<!-- Main -->
 					<div id="main">
 
 						<!-- Posts -->
 							<section class="posts">
+								<p>PORTOFOLIO</p>
 								<article>
 									<header>
 										<h2>Analisis Kinerja Department Perusahaan</h2>
