--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 									<header>
 										<h2>Analisis Kinerja Department Perusahaan</h2>
 									</header>
-									<a class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-									<p>Project yang berasal dari belajar mandiri melalui youtube Alex The Analyst tentang pembuatan cleaning data dan pembuatan dashboard menggunakan Excel. Dataset yang dgunakan merupakan dataset HR sebuah perusahaan dari kelas Leveraging Data Analytics oleh Talenthub Kementerian Ketenagakerjaan RI.</p>
+									<a class="image fit"><img src="images/pic05.PNG" alt="" /></a>
+									<p>Project tentang pembuatan cleaning data dan dashboard menggunakan Excel.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/IrmaD14/dashboard-excel/tree/main" class="button">View Project</a></li>
+										<li><a href="excel.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
