--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 								</article>
 								<article>
 									<header>
-										<h2>Sales Capstone Project</h2>
+										<h2>Capstone Project oleh Talenthub</h2>
 									</header>
-									<a class="image fit"><img src="images/pic03.png" alt="" /></a>
-									<p>Project ini merupakan Capstone Project dari kelas Leveraging Data Analytics for Business oleh Talenthub Kementerian Ketenagakerjaan RI. Dataset berupa penjualan produk suatu perusahaan.</p>
+									<a class="image fit"><img src="images/pic07.PNG" alt="" /></a>
+									<p>Project ini merupakan Capstone Project dari kelas Leveraging Data Analytics for Business oleh Talenthub Kementerian Ketenagakerjaan RI.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/IrmaD14/project-tableau" class="button">View Project</a></li>
+										<li><a href="tableau.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
