--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 									<a class="image fit"><img src="images/pic05.PNG" alt="" /></a>
 									<p>Project tentang pembuatan cleaning data dan dashboard menggunakan Excel.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/IrmaD14/IrmaD14.github.io/blob/main/excel.html" class="button">View Project</a></li>
+										<li><a href="excel.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
