--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<a class="image fit"><img src="images/pic07.PNG" alt="" /></a>
 									<p>Project ini merupakan Capstone Project dari kelas Leveraging Data Analytics for Business oleh Talenthub Kementerian Ketenagakerjaan RI.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/IrmaD14/IrmaD14.github.io/blob/main/tableau.html" class="button">View Project</a></li>
+										<li><a href="tableau.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
