--- a/excel.html
+++ b/excel.html
@@ -30,20 +30,15 @@
 						</ul>				
 					</div>
 
-				<!-- Header -->
 				<header id="header"></header>
 
-					<div id="main" class="alt">
+					<div id="main">
 						<div class="inner">
 							<header class="major">
-								<h2>Analisis Kinerja Department di Perusahaan</h2>
+								<h2>Capstone Project oleh Talenthub</h2>
 							</header>
-							<p>Project ini bermula dari keinginan saya dalam menguasai tools yang ada di excel lebih dalam khususnya yang berkaitan dengan data analyst melalui pembelajaran youtube Alex The Analyst. Saya menggunakan HR Data Analyst dari Capstone Project Talenthub Kementerian Ketenagakerjaan. Tahap 1 dilakukan cleaning data. Saya menghapus data duplikat yang ada di dataset. Kemudian merapikan dan mengecek setiap kolom apakah ada format yang tidak sesuai.</p>
-								<img src="images/pic06.PNG" alt="" class="center"/>
-							<p>Setelah data cleaning dilakukan, tahap selanjutnya adalah membuat pivot table. Dalam pivot table, saya membuat menjadi 4 tabel. Tabel 1 berisi salary, department, dan rata-rata jam kerja dalam sebulan. Tabel ini saya khususkan untuk melihat gaji dan jam kerja yang dihabiskan oleh karyawan di tiap divisi. Tabel 2 berisi department, jumlah work accident, resign, dan promosi pegawai 5 tahun terakhir. Tabel 3 berisi berisi department dan jumlah level kepuasan pegawai.</p>
-								<img src="images/pic05.PNG" alt="" class="center"/>
-							<p>Tabel 4 berisi department dan jumlah waktu yang dihabiskan di perusahaan. Setelah semua tabel dibuat, tahap terakhir adalah membuat dashboard. Dashboard dibuat semenarik mungkin agar dapat membuat pembaca tertarik untuk membacanya. Dashboard dapat menampilkan data setiap department dengan mengklik tombol department. </p>
-								<img src="images/pic01.jpg" alt="" class="center"/>
+							<p>Tujuan dari project ini adalah menampilkan dashboard yang berisi insight dan visualisasi dari data yang dianalisis menggunakan Tableau Public. Pada proses cleaning data, saya menggunakan jupyter notebook. Setelah data bersih, data di download dan di upload di Tableau Public. Kemudian, buat tabel persheet sesuai dengan data yang dibutuhkan. Disini, saya membuat 6 sheet yang berisi state, city, pendapatan, profit, produk diminati dan produk yang kurang diminati. Selanjutnya hasil dari sheet tersebut, disatukan menjadi sebuah dashboard yang menampilkan semua sheet tersebut.</p>
+								<img src="images/pic03.PNG" alt="" class="center" />
 						</div>
 					</div>
 
