--- a/tableau.html
+++ b/tableau.html
@@ -30,23 +30,16 @@
 						</ul>				
 					</div>
 
-				<!-- Header -->
 				<header id="header"></header>
 
-				<!-- Main -->
-					<div id="main" class="alt">
-
-						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h2>Capstone Project oleh Talenthub</h2>
-									</header>
-									<p>Tujuan dari project ini adalah menampilkan dashboard yang berisi insight dan visualisasi dari data yang dianalisis menggunakan Tableau Public. Pada proses cleaning data, saya menggunakan jupyter notebook. Setelah data bersih, data di download dan di upload di Tableau Public. Kemudian, buat tabel persheet sesuai dengan data yang dibutuhkan. Disini, saya membuat 6 sheet yang berisi state, city, pendapatan, profit, produk diminati dan produk yang kurang diminati. Selanjutnya hasil dari sheet tersebut, disatukan menjadi sebuah dashboard yang menampilkan semua sheet tersebut.</p>
-									<img src="images/pic03.png" alt="" class="center" />
-								</div>
-							</section>
-
+					<div id="main">
+						<div class="inner">
+							<header class="major">
+								<h2>Capstone Project oleh Talenthub</h2>
+							</header>
+							<p>Tujuan dari project ini adalah menampilkan dashboard yang berisi insight dan visualisasi dari data yang dianalisis menggunakan Tableau Public. Pada proses cleaning data, saya menggunakan jupyter notebook. Setelah data bersih, data di download dan di upload di Tableau Public. Kemudian, buat tabel persheet sesuai dengan data yang dibutuhkan. Disini, saya membuat 6 sheet yang berisi state, city, pendapatan, profit, produk diminati dan produk yang kurang diminati. Selanjutnya hasil dari sheet tersebut, disatukan menjadi sebuah dashboard yang menampilkan semua sheet tersebut.</p>
+								<img src="images/pic03.PNG" alt="" class="center" />
+						</div>
 					</div>
 
 				<!-- Copyright -->
