--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 										<h2>Analisis Kinerja Department Perusahaan</h2>
 									</header>
 									<a class="image fit"><img src="images/pic05.PNG" alt="" /></a>
-									<p>Project tentang pembuatan cleaning data dan dashboard menggunakan Excel.</p>
+									<p>Latihan tentang pembuatan cleaning data dan dashboard menggunakan Excel.</p>
 									<ul class="actions special">
-										<li><a href="https://irmad14.github.io/excel.html" class="button">View Project</a></li>
+										<li><a href="excel.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -55,7 +55,7 @@
 									<a class="image fit"><img src="images/pic07.PNG" alt="" /></a>
 									<p>Project ini merupakan Capstone Project dari kelas Leveraging Data Analytics for Business oleh Talenthub Kementerian Ketenagakerjaan RI.</p>
 									<ul class="actions special">
-										<li><a href="https://irmad14.github.io/tableau.html" class="button">View Project</a></li>
+										<li><a href="tableau.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -65,17 +65,27 @@
 									<a class="image fit"><img src="images/pic02.PNG" alt="" /></a>
 									<p>Project ini merupakan proyek akhir dari materi Belajar Analisis Data dengan Python yang diadakan oleh dicoding dan Indosat. Cleaning dan visualisasi data dilakukan menggunakan python kemudian dashboard di tampilkan melalui aplikasi streamlit</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/IrmaD14/analisisdata" class="button">View Project</a></li>
+										<li><a href="python.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2>Pembuatan Database menggunakan SQL Server Management Studio</h2>
+										<h2>Cleaning Data menggunakan SQL Server</h2>
 									</header>
 									<a class="image fit"><img src="images/pic04.PNG" alt="" /></a>
 									<p>Dataset diambil dari kaggle yang berisi data terkait liga sepakbola di beberapa negara. Cleaning data di lakukan menggunakan SQL Management Studio.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/IrmaD14/data_cleaningsql/tree/main" class="button">View Project</a></li>
+										<li><a href="sql.html" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Klasifikasi Gambar menggunakan Machine Learning</h2>
+									</header>
+									<a class="image fit"><img src="images/pic08.PNG" alt="" /></a>
+									<p>Dataset diambil dari kaggle yang berisi data terkait liga sepakbola di beberapa negara. Cleaning data di lakukan menggunakan SQL Management Studio.</p>
+									<ul class="actions special">
+										<li><a href="mlearn.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
