--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<header>
 										<h2>Klasifikasi Gambar menggunakan Machine Learning</h2>
 									</header>
-									<p>Proyek akhir dari kelas belajar Machine Learning untuk pemula yang diadakan oleh dicoding.</p>
+									<p>Dataset diambil dari kaggle yang berisi data terkait liga sepakbola di beberapa negara. Cleaning data di lakukan menggunakan SQL Management Studio.</p>
 									<ul class="actions special">
 										<li><a href="mlearn.html" class="button">View Project</a></li>
 									</ul>
