--- a/mlearn.html
+++ b/mlearn.html
@@ -57,7 +57,7 @@
 				   Proses kedua, import beberapa library yang akan digunakan seperti matplotlib, numpy, os, dll. Download dataset rockpaperscissors.zip. Kemudian, extract dataset dan ukur dataset tersebut menjadi train set dan validation set. Ukuran train set berjumlah 1314 sampel dan validation set berjumlah 874 sampel.</p>
                             <p>Proses ketiga, kita membangun arsitektur sebuah Convolutional Neural Network (CNN) melalui proses Conv2D (library convolution khusus 2 dimensi), MaxPooling2D (mengambil nilai maximum setelah proses convolution), Flatten dan Dense Layer (mendefinisikan parameter neural network). Selanjutnya, jalankan fungsi compile dan spesifikasi menggunakan optimizer, metrics dan loss function.
                             Terakhir, melatih model dengan metode fit menggunakan image data generator. Tes kodingan yang sudah dibuat dengan memasukkan gambar rock, scissors, dan paper.</p>
-                            <p>Dataset : <a href="www.dicoding.com">www.dicoding.com </a></p>
+                            <p>Sumber : <a href="https://www.dicoding.com/">www.dicoding.com</a></p>
 			</div>
 		</div>
 				<!-- Copyright -->
