--- a/mlearn.html
+++ b/mlearn.html
@@ -7,8 +7,7 @@
 <html>
 	<head>
 		<title>IrmaD14 | Data Analyst Enthusiastic</title>
-		<link rel="icon" type="image/x-icon" href="images/icon.PNG">
-		<link rel="icon" type="image/x-icon" href="images/icon.PNG">
+		<link rel="icon" type="image/x-icon" href="images/icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
