--- a/tableau.html
+++ b/tableau.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>IrmaD14 | Data Analyst Enthusiastic</title>
+		<title>IrmaD14 | Data Enthusiastic</title>
 		<link rel="icon" type="image/x-icon" href="images/icon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -22,7 +22,7 @@
 					<div id="intro">
 						<h1>Hi, my name is Irma Damayanti</h1>
 						<p>Tempat menyimpan hasil project belajar SQL, Tableau, Python, Excel,  dll<br>
-							dan terus berkembang menjadi seorang data analyst yang handal.</p>
+							dan terus berkembang menjadi seorang data profesional yang handal.</p>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/irmaaaa0811/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/IrmaD14/IrmaD14" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
