--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Cleaning Data di SQL Server dan Pembuatan Dashboard di Tableau</h2>
+										<h2>Cleaning Data di SQL Server dan Dashboard di Tableau</h2>
 									</header>
 									<a class="image fit"><img src="images/pic04.PNG" alt="" /></a>
 									<p>Dataset diambil dari kaggle yang berisi data terkait liga sepakbola di beberapa negara. Cleaning data di lakukan menggunakan SQL Management Studio.</p>
