--- a/mlearn.html
+++ b/mlearn.html
@@ -54,6 +54,7 @@
                                 </div>
                             </div>
                             <div class="clearfix"></div>
+				<i class="fas fa-calendar-alt" style="font-size: 12px; margin-bottom: 10px;"> 28 Februari 2024</i>
 				<p>Project ini merupakan proyek akhir dari pelatihan belajar machine learning untuk pemula yang diadakan oleh dicoding mengenai klasifikasi gambar menggunakan TensorFlow. Kriteria proyek akhir ini terdiri dari dataset yang dibagi menjadi train set dan validation set. Selain itu, proyek ini juga harus mengimplementasikan augmentasi gambar menggunakan Google Colab. 
 					Proses pertama, saya melakukan instalasi tensorflow di Google Colab menggunakan syntax !pip install tensorflow.</p>
 				<p>Proses kedua, import beberapa library yang akan digunakan seperti matplotlib, numpy, os, dll. Download dataset rockpaperscissors.zip. Kemudian, extract dataset dan ukur dataset tersebut menjadi train set dan validation set. Ukuran train set berjumlah 1314 sampel dan validation set berjumlah 874 sampel.</p>
