--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 									<header>
 										<h2>Klasifikasi Gambar menggunakan Machine Learning</h2>
 									</header>
+									<a class="image fit"><img src="images/pic08.PNG" alt="" /></a>
 									<p>Proyek akhir dari kelas belajar machine learning untuk pemula yang diadakan oleh dicoding mengenai klasifikasi gambar</p>
 									<ul class="actions special">
 										<li><a href="mlearn.html" class="button">View Project</a></li>
