--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
 										<li><a href="mlearn.html" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2>Project: Eksplorasi Data Ritel menggunakan R</h2>
+									</header>
+									<a class="image fit"><img src="images/pic15.PNG" alt="" /></a>
+									<p>Project ini merupakan bagian dari belajar Data Science di DQLab. Peserta diminta untuk melakukan analisis untuk menjamin ketersediaan stok barang dan meningkatkan pendapatan mitra menggunakan bahasa pemrograman R.</p>
+									<ul class="actions special">
+										<li><a href="projectR.html" class="button">View Project</a></li>
+									</ul>
+								</article>	
 							</section>
 					</div>
 
